# Arcade

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arcade  cmake_install.cmake
includes/: gameMap.hpp  my.hpp
lib/pacman_assets/: level1.map
src/: main.cpp
src/Utilitaires/: utilitaire.cpp
src/core/: Core.cpp  Core.hpp
src/games/: AGame.hpp  IGame.hpp  nibbler.cpp  nibbler.hpp  pacman.cpp  pacman.hpp  snake.cpp  snake.hpp
src/games/snake/: Snake.cpp  Snake.hpp  SnakeModule.cpp
src/graphicals/: IGraphics.cpp  IGraphics.hpp  gtk+.cpp  gtk.hpp  nCurse.cpp  nCurses.cpp  ncurse.cpp  ncurses.cpp  ncurses.hpp  sdl2.cpp  sdl2.hpp  sfml.cpp  sfml.hpp
src/graphicals/sfml/: SFMLGraphics.cpp  SFMLGraphics.hpp
